Updated source link to git

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -112,7 +112,7 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">For the full documentation, see our Git repo</h2>
-                            <button class="btn btn-primary mx-auto" type="submit" href="https://bitbucket.org/starninja/wine_expert/src/master/">Source Code</button>
+                            <button class="btn btn-primary mx-auto" type="submit" href="https://github.com/Cstolborg/beyond-the-grape">Source Code</button>
                     </div>
                 </div>
             </div>
