--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/predict/">Wine Predictor</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">The Project</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="#signup">Source Code</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="#api">Our Api</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="https://app.powerbi.com/view?r=eyJrIjoiYzYwNGM1OTMtZWNiMS00NzBhLWE2YjktMGNlZDJmMjYxZGNjIiwidCI6ImIzMDgwMDAyLTg1MDktNGRkMS1iNWYwLWQwZTA3N2QxZDIzYyIsImMiOjl9&pageName=ReportSection">Dashboard</a></li>
                     </ul>
                 </div>
@@ -102,6 +103,21 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- About-->
+        <section class="about-section text-center" id="api">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">Api</h2>
+                        <p class="text-white-50">
+                            Get a brief look at how some of the data looks in its raw format with our <a href="/api/wines"> free api </a>.
+                            There's a lot more of that on our private servers.
+                        </p>
+                    </div>
+                </div>
+                <!-- -- <img class="img-fluid" src="assets/img/ipad.png" alt="" /--> --&gt;
             </div>
         </section>
         <!-- Signup-->
